--- a/css/custom.css
+++ b/css/custom.css
@@ -59,9 +59,9 @@ img.light-brand {
   /* margin-top: 10px; */
 }
 
-header.affix .flex-inline {
+/* header.affix .flex-inline {
   margin-top: 10px;
-}
+} */
 
 /* header.affix-top .flex-inline {
     margin-top: 35px;
