--- a/css/custom.css
+++ b/css/custom.css
@@ -43,6 +43,7 @@
   height: 25px;
   margin-left: 10px;
 }
+
 .flex-inline {
   display: flex;
   align-items: center;
@@ -79,15 +80,36 @@ header .menu {
 }
 
 iframe #main .af {
-    background-color: #85c5e2 !important;
+  background-color: #85c5e2 !important;
 }
 
 iframe .at {
-    background: linear-gradient(rgba(0, 0, 0, 0.2), rgb(26 73 95)) !important;
-    padding: 2% !important;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgb(26 73 95)) !important;
+  padding: 2% !important;
 
 }
 
 iframe .dx {
-    border-radius: 10px !important;
+  border-radius: 10px !important;
+}
+
+#cursor {
+  width: 60px;
+  height: 60px;
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid #2a2a2a;
+  border-radius: 50%;
+  position: fixed;
+  margin: -30px 0 0 -30px;
+  z-index: 1000;
+  pointer-events: none;
+}
+
+#cursor span {
+  color: #2a2a2a;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  opacity: 0;
 }
