--- a/css/custom.css
+++ b/css/custom.css
@@ -93,7 +93,7 @@ iframe .dx {
   border-radius: 10px !important;
 }
 
-#cursor {
+/* #cursor {
   width: 60px;
   height: 60px;
   background-color: rgba(0, 0, 0, 0);
@@ -112,4 +112,96 @@ iframe .dx {
   left: 50%;
   transform: translate(-50%, -40%);
   opacity: 0;
+} */
+
+.cursor {
+  position: absolute;
+  background: #2a2a2a;
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  z-index: 1;
+  transition: 0.5s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+    0.2s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity;
+  user-select: none;
+  pointer-events: none;
+  transform: scale(0.8);
+  z-index: 1000;
+
+}
+
+.cursor::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+  opacity: 0;
+}
+
+.cursor.active {
+  opacity: 1;
+  transform: scale(12);
+}
+
+.cursor.active::before {
+  opacity: 1;
+}
+
+.cursor-follower {
+  position: absolute;
+  /* background: rgba(102, 102, 102, 0.1);
+  width: 40px;
+  height: 40px; */
+  width: 60px;
+  height: 60px;
+  background-color: rgba(0, 0, 0, 0);
+  border: 1px solid #2a2a2a;
+  border-radius: 50%;
+  z-index: 1;
+  transition: 0.6s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+    0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity;
+  user-select: none;
+  pointer-events: none;
+  /* transform: translate(4px, 4px); */
+  z-index: 1000;
+}
+
+.cursor-follower.active {
+  opacity: 0.3;
+  transform: scale(0);
+}
+
+.portfolio-thumb {
+  overflow: hidden;
+  transition: all 0.5s cubic-bezier(0.25, 1, 0.3, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-thumb img {
+  max-width: 360px;
+  opacity: 0.4;
+  transition: all 0.5s cubic-bezier(0.25, 1, 0.3, 1);
+  transform-origin: 90% center;
+}
+
+/* .portfolio-item:hover .portfolio-thumb {
+  transform: translateX(-1.75rem);
+} */
+
+.portfolio-item:hover .portfolio-thumb img {
+  opacity: 0.8;
+  transform: scale(1.1);
+}
+
+body {
+  cursor: none;
 }
